@@ -19,6 +19,9 @@ public class Xor16CheckSum extends CheckSum
     // For remotes with segments, UpdateImage() updates the checksum range end to
     // point to the last byte written.  The number of bytes covered by the checksum
     // needs to be rounded up to a multiple of 4.
+    //
+    // TESTED:  Round to multiple of 2 fails for remote with signature 257302
+//    end = end + 1 - ( end & 1 );
     end = end + 3 - ( end & 3 );
     short sum = 0;
     for ( int i = start; i <= end - 1; i += 2 )
